NPE防护补充